--- a/app/globals.css
+++ b/app/globals.css
@@ -14,10 +14,11 @@
   --color-darkColor: #151515;
   --color-lightColor: #52525b;
   --color-lightOrange: #fca99b;
-  --color-shop_light_green: #3b9c3c;
+  --color-shop_lighter_green: #01d603;
   --color-deal-bg: #f1f3f8;
   --color-dark_blue: #070738;
   --color-shop_lighter_bg: #f1f3f8;
+  --color-shop_light_text: #686e7d;
 }
 
 @theme inline {
